Commit updated README.md with included wireframe links - created Wireframe folder with these images

--- a/index.html
+++ b/index.html
@@ -8,11 +8,41 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <link rel="stylesheet" href="assets/css/style.css">
+
 <title>Title</title>
+
 </head>
+
 <body>
- 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+
+<header>
+    logo and navigation bar here
+</header>
+
+
+<section>
+    hero image here
+</section>
+
+<section>
+    membership options heading and three button options
+</section>
+
+<section>
+    Opening hours, map and contact info 
+</section>
+
+
+
+<footer>
+    social links in here, facebook and instagram
+</footer>
+
 </body>
+
+
+
 </html>
