Commit to add Images file and Navigation bar HTML and CSS

--- a/index.html
+++ b/index.html
@@ -3,42 +3,66 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Ridgeway Gym</title>
+<link href="assets/css/style.css" rel="stylesheet" />
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="Description" content="Enter your description here"/>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-<link rel="stylesheet" href="assets/css/style.css">
-
-<title>Title</title>
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
- <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-
+<!-- navigation bar and logo -->
 <header>
-    logo and navigation bar here
+   <a href="index.html">
+        <h2 id="logo">Ridgeway Gym</h2>
+   </a>
+   <nav>
+    <ul id="menu">
+        <li>
+            <a href="sign-in.html">Sign-In</a>
+        </li>   
+        <li>
+            <a href="our-gym.html">Our Gym</a>
+        </li>
+        <li>
+            <a href="timetable.html">Timetable</a>
+        </li>
+        <li>
+            <a class="active" href="index.html">Home</a>
+        </li>
+        
+    </ul>
+   </nav>
 </header>
 
-
-<section>
-    hero image here
+<!-- sliding photo main image-->
+<section id="gymhome-outer">
+    <div id="gymhome-image"></div>
+    <div id="cover-text">
+        <h2>Sign up today?</h2>
+        <h3>£0 Joining Fee until October</h3>
+    </div>
 </section>
 
+<!-- membership options -->
 <section>
     membership options heading and three button options
 </section>
 
+<!-- three sections for the opening hours map and contact info -->
 <section>
     Opening hours, map and contact info 
 </section>
 
 
-
+<!-- social links and copyright info-->
 <footer>
-    social links in here, facebook and instagram
+    social links facebook and instagram, and Copyright tag
 </footer>
 
 </body>
