Update CSS file, map and timetable page started

--- a/our-gym.html
+++ b/our-gym.html
@@ -42,7 +42,7 @@
 
 <!-- sliding photo main image-->
 <section id="secondweight-outer">
-    <div id="secondweight-image"></div>
+    <div id="secondweight-image" alt="Close up of some weights on the floor"></div>
     
 </section>
 
