--- a/sign-in.html
+++ b/sign-in.html
@@ -42,12 +42,67 @@
 
 <!-- sliding photo main image-->
 <section id="strong-outer">
-    <div id="strong-image"></div>
+    <div id="strong-image" alt="Picture of a ************"></div>
 </section>
 
 <section>
     Timetable info times and classes
 </section>
+
+
+<!-- box with customer details form-->
+
+<fieldset>
+    <legend>Log Into Your Account:</legend>
+    <form action="********" method="get">
+
+        <label for="email">Email:</label>
+        <input type="email" id="user" name="user_email" placeholder="Email Address" size="30px" maxlength="100px" required="required">
+
+        <br>
+
+        <label for="password">Password:</label>
+        <input type="text" id="user" name="password" size="30px" maxlength="100px" placeholder="Password" required="required">
+        <br>
+        <input type="submit" value="submit" />
+       
+    </form>
+</fieldset>
+
+<fieldset>
+    <legend>Register To Create An Account:</legend>
+    <form action="********" method="post">
+        <label for="fname">First Name:</label>
+        <input type="text" name="name" id="user" size="30px" maxlength="100px">
+        <br>
+        <label for="lname">Last Name:</label>
+        <input type="text" name="name" id="user" size="30px" maxlength="100px">
+        <br>
+        <label for="telephone">Telephone:</label>
+        <input type="text" name="telephone" id="user" size="30px" maxlength="100px" />
+        <br>
+        <label for="email">Email:</label>
+        <input type="email" name="user_email" id="user" placeholder="Email Address" size="30px" maxlength="100px" required="required">
+        <br>
+        <label for="email">Repeat Email:</label>
+        <input type="email" name="user_email" id="user" size="30px" maxlength="100px" placeholder="Repeat Email Address" required="required">
+
+        <br>
+
+        <label for="password">Create Password:</label>
+        <input type="text" id="user" name="password" size="30px" maxlength="100px" placeholder="Password" required="required">
+        <br>
+        <label for="password">Repeat Password:</label>
+        <input type="text" id="user" name="password" size="30px" maxlength="100px" placeholder="Password" required="required">
+        <br>
+        <input type="submit" value="submit" />
+       
+    </form>
+</fieldset>
+
+
+
+
 
 
 
